Changed searchbar and fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -34,13 +34,18 @@ li,
 
 /* nav */
 
+header {
+    border-bottom: 0.5px solid grey;
+}
+
 .nav-container {
-    min-width: 100vw;
+    max-width: 70vw;
+    margin-right: auto;
+    margin-left: auto;
     height: 60px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-bottom: 0.5px solid grey;
 }
 
 .nav-left {
@@ -63,7 +68,7 @@ li,
 .nav-right {
     /* border: 2px solid orange; */
     width: 300px;
-    
+    font-weight: 400;
 }
 
 .nav-right ul {
@@ -96,15 +101,15 @@ li,
     height: 2.5rem;
     width: 210px;
     padding-left: 10px;
-    background-color: rgb(240, 241, 242);
     border-radius: 4px;
-    
+    border: none;
+    color: var(--font-color-blue);
+    font-size: 1.25rem;
+    background: #E3E5E6 url(./images/searchicon1.png) right top no-repeat;
 }
 
-.searchbar a {
-    width: 200px;
+.searchbar::placeholder {
     color: var(--font-color-blue);
-    font-weight: 600;
 }
 
 img.search-icon {
@@ -112,7 +117,7 @@ img.search-icon {
 }
 
 .nav-right__link {
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-weight: 600;
 }
 
@@ -120,7 +125,7 @@ img.search-icon {
 /* main content */
 
 .main-content {
-    width: 70vw;
+    width: 65vw;
     height: 70vh;
     display: flex;
     justify-content: center;
@@ -128,8 +133,12 @@ img.search-icon {
     margin-left: 250px;
 }
 
+.description {
+    width: 40vw;
+}
+
 .description h1 {
-    font-size: 2.75rem;
+    font-size: 3.5rem;
     font-family: 'Noto Serif';
     font-weight: 500;
 }
@@ -138,6 +147,7 @@ img.search-icon {
     margin: 2em 0;
     line-height: 20px;
     font-size: 1.25rem;
+    word-wrap: wrap;
 }
 
 .description ul {
@@ -147,12 +157,11 @@ img.search-icon {
 }
 
 .main-content__links {
-    
     font-weight: 600;
     color: white;
     background-color: var(--font-color-blue);
     margin-right: 1rem;
-    padding: 10px 20px;
+    padding: 10px 15px;
     border-radius: 4px;
 
 }
